--- a/BE/package.json
+++ b/BE/package.json
@@ -4,8 +4,8 @@
   "description": "Backend API server with Express.js, MongoDB, and file uploads",
   "main": "src/app.js",
   "scripts": {
-    "start": "nodemon src/app.js",
-    "dev": "node src/app.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
