--- a/BE/package.json
+++ b/BE/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.2",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "1.4.5-lts.1",
+    "nodemailer": "^7.0.9",
     "path": "^0.12.7"
   },
   "devDependencies": {
