--- a/BE/package.json
+++ b/BE/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:uploads": "node scripts/migrateUploadsToCloudinary.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -15,6 +16,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.2",
     "handlebars": "^4.7.8",
+    "cloudinary": "^1.41.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "1.4.5-lts.1",
