--- a/FE/package.json
+++ b/FE/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.12.2",
     "glightbox": "^3.3.1",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
