--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,17 +27,17 @@ jobs:
         run: npm run build
         working-directory: FE
 
-      - name: Upload FE dist
-        uses: appleboy/scp-action@v0.1.7
+      - name: Setup SSH key
+        uses: webfactory/ssh-agent@v0.7.0
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_PORT }}
-          source: "FE/dist/*"
-          target: ${{ secrets.VPS_FE_PATH }}
+          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
-      - name: Restart PM2
+      - name: Sync FE dist
+        run: |
+          rsync -az --delete --exclude '.well-known' -e "ssh -o StrictHostKeyChecking=no -p ${{ secrets.VPS_PORT }}" \
+            FE/dist/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:${{ secrets.VPS_FE_PATH }}/
+
+      - name: Deploy BE and restart PM2
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -45,4 +45,8 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            pm2 restart momscharcoalgrill
+            set -e
+            cd ${{ secrets.VPS_BE_PATH }}
+            git pull origin main
+            npm ci --omit=dev
+            pm2 restart ${{ secrets.VPS_PM2_NAME }}
