--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,26 +27,23 @@ jobs:
         run: npm run build
         working-directory: FE
 
-      - name: Setup SSH key
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
+      - name: Write SSH key
+        run: |
+          mkdir -p ~/.ssh
+          printf '%s' "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r' | sed 's/\\n/\n/g' > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Sync FE dist
         run: |
-          rsync -az --delete --exclude '.well-known' -e "ssh -o StrictHostKeyChecking=no -p ${{ secrets.VPS_PORT }}" \
+          rsync -az --delete --exclude '.well-known' -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p ${{ secrets.VPS_PORT }}" \
             FE/dist/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:${{ secrets.VPS_FE_PATH }}/
 
       - name: Deploy BE and restart PM2
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_PORT }}
-          script: |
-            set -e
-            cd ${{ secrets.VPS_BE_PATH }}
-            git pull origin main
-            npm ci --omit=dev
-            pm2 restart ${{ secrets.VPS_PM2_NAME }}
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p ${{ secrets.VPS_PORT }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+          set -e
+          cd ${{ secrets.VPS_BE_PATH }}
+          git pull origin main
+          npm ci --omit=dev
+          pm2 restart ${{ secrets.VPS_PM2_NAME }}
+          EOF
