--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.12.2",
+    "framer-motion": "^11.11.7",
     "glightbox": "^3.3.1",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
