--- a/FE/.env
+++ b/FE/.env
@@ -1,3 +1,4 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=c8c4eac191484bf6b234ac71c399b302
-VITE_API_URL=https://mumscharcoalandgrill.com.au/api/
+#VITE_API_URL=https://mumscharcoalandgrill.com.au/api/
+VITE_API_URL=http://localhost:5000/api/
